<resources>
    <string name="app_name">Receipt Suite</string>
    <string name="log_in">Log In</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="nameHint">Name</string>
    <string name="image_picker_error">Error picking image</string>
    <string name="dialog_select_prompt">Please choose gallery to upload a photo</string>
    <string name="dialog_select_camera">Camera</string>
    <string name="dialog_select_gallery">Gallery</string>
    <string name="invalidEmailMsg">Email format not valid. Ex. John@Doe.com</string>
    <string name="confirmPasswordErr">Error passwords do not match!</string>
    <string name="incompleteFormMsg">All fields must be filled</string>
    <string name="unable">Unable to</string>
    <string name="err">Error</string>
    <string name="found">I found these things:\n\n</string>
    <string name="testString">test</string>
    <string name="nothing">nothing</string>
    <string name="print">print</string>
    <string name="clicked">clicked</string>
    <string name="testCaps">TEST</string>
    <string name="startParse">STARTING PARSE\n</string>
    <string name="visionRequestFailed">Cloud Vision API request failed. Check logs for details.</string>
    <string name="IOERequestFail">"failed to make API request because of other IOException "</string>
    <string name="JSONRespExceptionFail">"failed to make API request because "</string>
    <string name="sendingRequest">created Cloud Vision request object, sending request</string>
    <string name="detectionType">TEXT_DETECTION</string>
    <string name="nullImage">Image picker gave us a null image.</string>
    <string name="imagePickFail">"Image picking failed because "</string>
    <string name="intenttype">image/*</string>
    <string name="choosePhotoPrompt">Select a photo</string>
    <string name="loginExtension">login.php</string>
    <string name="queryUN">\?username=</string>
    <string name="queryPass">&amp;password=</string>
    <string name="unableToConnect">"Unable to connect, Reason: "</string>
    <string name="location">Location</string>
    <string name="amount">Amount</string>
    <string name="payment_method">Payment Method</string>
    <string name="date">Date</string>
    <string name="contentdesc">Receipt image</string>
    <string name="retake_image">Retake Image</string>
    <string name="ok">OK</string>
    <string name="camera">Camera</string>
    <string name="cost">Cost</string>
    <string name="PIN_prompt">Enter PIN</string>
    <string name="submit">Submit</string>
    <string name="sign_up">Sign Up</string>
    <string name="address_example_com">Login email@email.com</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="pin_create">I would like to create a PIN for added security</string>
    <string name="edit">Edit</string>
    <string name="placeholder_cost">$xx.xx</string>
    <string name="example_location">example location</string>
    <string name="placeholder_date">mm/dd/yyyy</string>
    <string name="placeholder_extra">extra data</string>
    <string name="placeholder_extra2">more data</string>
    <string name="passwordError">Password must be at least 8 characters long</string>
    <string name="passwordErrorMessage">Password must be at least 8 characters long</string>
    <string name="desired_pin">Desired PIN</string>
    <string name="isloggedin">isLoggedIn</string>
    <string name="hasPIN">hasPIN</string>
    <string name="PINNum">PIN</string>
    <string name="prefKey">edu.uw.tcss450.PREFS</string>
    <string name="locationstr">Location:</string>
    <string name="amountstr">Amount:</string>
    <string name="paymentstr">Payment:</string>
    <string name="datestr">Date:</string>
    <string name="UID">userID</string>
    <string name="logoContentDesc">Receipt Suite logo</string>
    <string name="category">Category</string>
    <string name="nullStr">null</string>
    <string name="updateStr">Update</string>
    <string name="overview">Overview</string>
    <string name="backStr">Back</string>

    <string-array name="categories">
        <item>Show All</item>
        <item>Income</item>
        <item>Miscellaneous</item>
        <item>Expense</item>
        <item>Education</item>
        <item>Shopping</item>
        <item>Personal Care</item>
        <item>Health and Fitness</item>
        <item>Kids</item>
        <item>Food and Dining</item>
        <item>Donations</item>
        <item>Bills</item>
        <item>Transport</item>
        <item>Travel</item>
        <item>Business Services</item>
        <item>Taxes</item>
    </string-array>

    <string-array name="category_assignment">
        <item>Select a Category</item>
        <item>Income</item>
        <item>Miscellaneous</item>
        <item>Expense</item>
        <item>Education</item>
        <item>Shopping</item>
        <item>Personal Care</item>
        <item>Health and Fitness</item>
        <item>Kids</item>
        <item>Food and Dining</item>
        <item>Donations</item>
        <item>Bills</item>
        <item>Transport</item>
        <item>Travel</item>
        <item>Business Services</item>
        <item>Taxes</item>
    </string-array>

</resources>
