<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_view_entry"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="entry.viewEntryActivity"
    >

    <Button
        android:text="@string/edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button4" />

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:background="@color/colorPrimary">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:srcCompat="@mipmap/ic_launcher"
            android:id="@+id/imageView2"
            android:scaleType="fitStart"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:contentDescription="@string/contentdesc" />

    </RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:text="@string/placeholder_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cost"
            android:layout_marginTop="15dp" />
        <TextView
            android:text="@string/example_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/location"
            android:layout_marginTop="15dp" />
        <TextView
            android:text="@string/placeholder_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/date"
            android:layout_marginTop="15dp" />
        <TextView
            android:text="@string/placeholder_extra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/extraData1"
            android:layout_marginTop="15dp" />
        <TextView
            android:text="@string/placeholder_extra2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/extraData2"
            android:layout_marginTop="15dp" />
    </LinearLayout>

</LinearLayout>
