<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_sign_up"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:orientation="vertical"
    tools:context="tcss450.uw.edu.gvtest.SignUpActivity"
    android:background="@color/colorPrimary"
    >

    <TextView
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"
        android:textColor="@color/colorIcons"
        android:textSize="30sp"
        android:layout_marginStart="0dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        android:paddingStart="16dp"
        android:layout_gravity="top"
        android:orientation="vertical">

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"

            android:layout_marginTop="25dp"
            android:id="@+id/editText"
            android:hint="@string/nameHint"

            android:background="@drawable/underlinededittext"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"

            android:id="@+id/editText4"
            android:background="@drawable/underlinededittext"
            android:layout_marginTop="20dp"
            android:hint="@string/address_example_com" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:id="@+id/editText6"
            android:hint="@string/enter_password"
            android:background="@drawable/underlinededittext"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_marginTop="20dp"
            android:id="@+id/editText7"
            android:hint="@string/confirm_password"
            android:background="@drawable/underlinededittext"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/underlinededittext"
                android:inputType="numberPassword"
                android:layout_marginTop="20dp"
                android:paddingEnd="10dp"
                android:id="@+id/newPIN"
                android:hint="@string/desired_pin"
                android:visibility="visible"/>
            <CheckBox
            android:text="@string/pin_create"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/checkBox"
            android:layout_marginTop="20dp"
            android:buttonTint="@color/colorPrimary"
            android:paddingEnd="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/outlinedroundtextbox"
            android:checked="true"
            android:onClick="setPINFieldVisibility"
            />
        </LinearLayout>


        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="createUser"
            android:id="@+id/button3" />

    </LinearLayout>
</LinearLayout>