<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="entry.OverviewActivity"
    >

    <LinearLayout
        android:id="@+id/activity_overview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/background"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="13dp"
                android:background="@color/colorPrimary"
                android:max="100"
                android:paddingBottom="2dp"
                android:paddingEnd="@dimen/fab_margin"
                android:paddingStart="@dimen/fab_margin"
                android:paddingTop="2dp"
                android:progress="100"
                android:progressTint="@color/colorLightPrimary"
                android:progressTintMode="src_over"
                android:scaleX="2"
                android:scaleY="5"
                android:visibility="visible" />

            <TextView
                android:id="@+id/progressLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/progressBar3"
                android:layout_centerHorizontal="true"
                android:text=""
                android:textColor="@color/colorTextPrimary"
                android:visibility="invisible" />

            <TextView
                android:id="@+id/overviewtxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/progressLabel"
                android:layout_marginStart="14dp"
                android:layout_marginTop="12dp"
                android:text="@string/overview"
                android:textColor="@color/colorIcons"
                android:textSize="8pt" />

            <Spinner
                android:id="@+id/category_selector"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/overviewtxt"
                android:layout_alignParentEnd="true"
                android:textColor="@color/colorIcons"
                android:background="@drawable/b2">

            </Spinner>

        </RelativeLayout>

        <GridLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:columnCount="4">

            <TextView
                android:id="@+id/Date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight=".3"
                android:text="@string/date" />

            <TextView
                android:id="@+id/Location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight=".3"
                android:text="@string/location"
                android:textAlignment="viewStart" />

            <TextView
                android:id="@+id/Cost"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight=".2"
                android:text="@string/cost"
                android:textAlignment="viewEnd" />

            <TextView
                android:id="@+id/Category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_columnWeight=".2"
                android:text="@string/category"
                android:textAlignment="center" />
        </GridLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <GridLayout
                android:id="@+id/entries"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:columnCount="4"></GridLayout>
        </ScrollView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/cameraButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:backgroundTint="@color/colorPrimary"
            android:layout_margin="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_add_black_24dp"
            android:onClick="cameraButtonClicked"/>
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/logoutButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:backgroundTint="@color/colorLightPrimary"
            android:layout_below="@id/cameraButton"
            android:layout_marginLeft="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            app:srcCompat="@drawable/ic_account_circle_black_24dp"
            android:onClick="onLogoutPressed"/>
    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>
